--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@ Extensive experiments show that PDTS unlocks the potential of robust active task
         <p class="text" style="width: 60%; margin-left: 20%; font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
             The proposed PDTS demonstrates superior performance in both zero-shot and few-shot adaptive decision-making tasks, 
             including Meta-RL, Physical DR, and Visual DR. 
-            Its advantages include (i) robust adaptation, 
-            (ii) accelerated training, 
-            (iii) improved OOD performance, 
-            (iv) better task difficulty discrimination, 
-            and (v) minimal additional cost.
+            Its advantages include <b>(i) robust adaptation, 
+                (ii) accelerated training, 
+                (iii) improved OOD performance, 
+                (iv) better task difficulty discrimination, 
+                and (v) minimal additional cost.</b>
         </p>
         <!-- <img class="background" src="assets/figures/clarity.png"> -->
     </div>
@@ -467,16 +467,24 @@ In particular, PDTS exceeds MPTS in predicting accuracies.
         <p class="text">
             If you find our works helpful, please consider citing:
         </p>
-<pre><code class="plaintext">@article{wang2025beyond,
-    title={Beyond Any-Shot Adaptation: Predicting Optimization Outcome for Robustness Gains without Extra Pay},
-    author={Wang, Qi Cheems and Xiao, Zehao and Mao, Yixiu and Qu, Yun and Shen, Jiayi and Lv, Yiqin and Ji, Xiangyang},
-    journal={arXiv preprint arXiv:2501.11039},
-    year={2025}
-  }</code></pre>
-<pre><code class="plaintext">@article{wangmodel,
-    title={Model Predictive Task Sampling for Efficient and Robust Adaptation},
-    author={Wang, Qi Cheems and Xiao, Zehao and Mao, Yixiu and Qu, Yun and Ji, Jiayi Shen2 Yiqin Lv1 Xiangyang}
-  }</code></pre>
+<pre><code class="plaintext">@misc{wang2025MPTS,
+    title={Model Predictive Task Sampling for Efficient and Robust Adaptation}, 
+    author={Qi Cheems Wang and Zehao Xiao and Yixiu Mao and Yun Qu and Jiayi Shen and Yiqin Lv and Xiangyang Ji},
+    year={2025},
+    eprint={2501.11039},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    url={https://arxiv.org/abs/2501.11039}, 
+}</code></pre>
+<pre><code class="plaintext">@misc{qu2025fastrobusttasksampling,
+    title={Fast and Robust: Task Sampling with Posterior and Diversity Synergies for Adaptive Decision-Makers in Randomized Environments}, 
+    author={Yun Qu and Qi and Wang and Yixiu Mao and Yiqin Lv and Xiangyang Ji},
+    year={2025},
+    eprint={2504.19139},
+    archivePrefix={arXiv},
+    primaryClass={cs.LG},
+    url={https://arxiv.org/abs/2504.19139}, 
+}</code></pre>
     </div>
 
     <!-- Footer Page -->
