--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Extensive experiments show that PDTS unlocks the potential of robust active task
                         <div>
                             <a href="https://arxiv.org/abs/2504.19139" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)"> Paper <i class="fa-solid fa-book-open"></i></a> &nbsp;&nbsp; 
                             <a href="https://github.com/thu-rllab/PDTS" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">Code <i class="fa-solid fa-code"></i></a>  &nbsp;&nbsp; 
-                            <!-- <a href="https://www.microsoft.com/en-gb/microsoft-365/powerpoint" class="button icon" style="background-color: rgba(255, 255, 255, 0.2);">Slides <i class="fa-regular fa-file-powerpoint"></i></a> &nbsp;&nbsp;  -->
+                            <a href="https://docs.google.com/presentation/d/1vYL2hmudNkj6v1sp9tdUlFR0AQfKS6R9/edit?usp=drive_link&ouid=104345106497209619985&rtpof=true&sd=true" class="button icon" style="background-color: rgba(255, 255, 255, 0.2);">Slides <i class="fa-regular fa-file-powerpoint"></i></a> &nbsp;&nbsp; 
                             <!-- <a href="https://huggingface.co/spaces/" class="button icon" style="background-color: rgba(255, 255, 255, 0.2)">Demo <i class="fa-solid fa-laptop-code"></i></a>  -->
                         </div>
                     </div>
