--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ In particular, PDTS exceeds MPTS in predicting accuracies.
     primaryClass={cs.LG},
     url={https://arxiv.org/abs/2501.11039}, 
 }</code></pre>
-<pre><code class="plaintext">@misc{qu2025fastrobusttasksampling,
+<pre><code class="plaintext">@misc{qu2025PDTS,
     title={Fast and Robust: Task Sampling with Posterior and Diversity Synergies for Adaptive Decision-Makers in Randomized Environments}, 
     author={Yun Qu and Qi and Wang and Yixiu Mao and Yiqin Lv and Xiangyang Ji},
     year={2025},
