--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@ Extensive experiments show that PDTS unlocks the potential of robust active task
                     </div>
                 </div>
                
-                <!-- <div class="info">
+                <div class="info">
                     <p>ICML 2025</p>
-                </div> -->
+                </div>
             </div>
 
         </div>
