--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ In particular, PDTS exceeds MPTS in predicting accuracies.
 }</code></pre>
 <pre><code class="plaintext">@misc{qu2025PDTS,
     title={Fast and Robust: Task Sampling with Posterior and Diversity Synergies for Adaptive Decision-Makers in Randomized Environments}, 
-    author={Yun Qu and Qi and Wang and Yixiu Mao and Yiqin Lv and Xiangyang Ji},
+    author={Yun Qu and Qi Cheems Wang and Yixiu Mao and Yiqin Lv and Xiangyang Ji},
     year={2025},
     eprint={2504.19139},
     archivePrefix={arXiv},
